# codex-usage-taskbar-monitor

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: diagnose.rs  main.rs  models.rs  poller.rs  tray_icon.rs  updater.rs  window.rs
src/core/: mod.rs  models.rs
src/localization/: dutch.rs  english.rs  french.rs  german.rs  japanese.rs  korean.rs  mod.rs  portuguese_brazil.rs  russian.rs  simplified_chinese.rs  spanish.rs  traditional_chinese.rs
src/platform/: mod.rs  native.rs  theme.rs
src/poller/: api.rs  credentials.rs  format.rs  mod.rs
src/tray/: mod.rs
src/updater/: github.rs  install.rs  mod.rs  winget.rs
src/window/: events.rs  layout.rs  menu.rs  mod.rs  polling.rs  positioning.rs  render.rs  runtime.rs  settings.rs  startup.rs  state.rs  taskbar.rs  updates.rs  widget.rs
