[package]
name = "codex-usage-taskbar-monitor"
version = "1.5.2"
edition = "2021"
license = "MIT"
description = "Codex Usage Monitor"
homepage = "https://github.com/LiarCoder/codex-usage-taskbar-monitor"
repository = "https://github.com/LiarCoder/codex-usage-taskbar-monitor"

[package.metadata.winres]
CompanyName = "LiarCoder"
ProductName = "Codex Usage Monitor"
FileDescription = "Codex Usage Monitor"
OriginalFilename = "codex-usage-taskbar-monitor.exe"
InternalName = "CodexUsageTaskbarMonitor"
Comments = "https://github.com/LiarCoder/codex-usage-taskbar-monitor"
LegalCopyright = "Copyright (C) 2026 LiarCoder"

[dependencies]
ureq = { version = "2", default-features = false, features = ["native-tls", "json", "proxy-from-env"] }
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
]

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
